[Fix]: Align the text to center

--- a/Clones/CodeWithHarry Clone/css/partials/footer.css
+++ b/Clones/CodeWithHarry Clone/css/partials/footer.css
@@ -10,4 +10,6 @@
     font-weight: 300;
     
     padding: 1.9rem;
+
+    text-align: center;
 }
